// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#B2B0B2",
        "fontSize": 12,
      },
      Object {},
    ]
  }
  testID="Text"
>
  1:51 PM
</MyText>
`;

exports[`renders correctly with comment formatting 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#B2B0B2",
        "fontSize": 12,
      },
      Object {},
    ]
  }
  testID="Text"
>
  Monday @ 1:51 PM
</MyText>
`;

exports[`renders correctly with custom styling 1`] = `
<MyText
  style={
    Array [
      Object {
        "color": "#B2B0B2",
        "fontSize": 12,
      },
      Object {
        "color": "blue",
      },
    ]
  }
  testID="Text"
>
  1:51 PM
</MyText>
`;
